crates/compiler/src/tests/e2e/good/0158_fn_grade_if/main.gom
fn grade(score: int32) -> string {
    if score >= 90 {
        "A"
    } else if score >= 80 {
        "B"
    } else if score >= 70 {
        "C"
    } else if score >= 60 {
        "D"
    } else {
        "F"
    }
}

fn main() {
    println(grade(95));
    println(grade(85));
    println(grade(75));
    println(grade(65));
    println(grade(50));
}
