crates/compiler/src/tests/e2e/bad/0001_if_branch_type_mismatch/main.gom
fn classify(score: int32) -> string {
  if score >= 60 { "pass" } else { 0 }
}

fn main() -> unit {
  let _ = classify(75);
  ()
}
